condiments, meat, soil bed

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -1323,13 +1323,27 @@
     - BioGenEthanol
     - BioGenCream
     - BioGenBlackpepper
+    - BioGenAstrotame # Frontier
+    - BioGenBbq # Frontier
+    - BioGenCornoil # Frontier
+    - BioGenFrostoil # Frontier
+    - BioGenHotsauce # Frontier
+    - BioGenHorseradishSauce # Frontier
+    - BioGenKetchup # Frontier
+    - BioGenMustard # Frontier
+    - BioGenSoysauce # Frontier
+    - BioGenOilOlive # Frontier
     - BioGenEnzyme
     - BioGenFlour
+    - BioGenCornmeal # Frontier
     - BioGenSugar
+    - NFBioGenFoodMeat # Frontier
     - BioGenMonkeyCube
     - BioGenKoboldCube
     - CowCube # Frontier: copied from Biofabricator above
     - GoatCube # Frontier
+    - BioGenChickenCube # Frontier
+    - BioGenDuckCube # Frontier
     - MothroachCube # Frontier
     - MouseCube # Frontier
     - CockroachCube # Frontier
@@ -1347,6 +1361,7 @@
     - BioGenLeft4Zed
     - BioGenEZNutrient
     - BioGenRobustHarvest
+    - NFBioGenHydroponicsSoilNutritionFlatpack
   - type: EmagLatheRecipes # Frontier
     emagStaticRecipes: # Frontier
     - AbominationCube # Frontier
