--- a/Resources/Prototypes/Entities/Structures/soil.yml
+++ b/Resources/Prototypes/Entities/Structures/soil.yml
@@ -55,3 +55,6 @@
         solution: soil
   - type: Appearance
   - type: PlantHolderVisuals
+  - type: Construction # Frontier
+    graph: soil # Frontier
+    node: hydroponicsSoil # Frontier
