--- a/Resources/Maps/_NF/Shuttles/hammer.yml
+++ b/Resources/Maps/_NF/Shuttles/hammer.yml
@@ -534,6 +534,8 @@ entities:
       parent: 2
     - type: DeviceList
       devices:
+      - 54
+      - 375
       - 211
 - proto: AirCanister
   entities:
@@ -1929,6 +1931,9 @@ entities:
       rot: 3.141592653589793 rad
       pos: -4.5,-2.5
       parent: 2
+    - type: DeviceNetwork
+      deviceLists:
+      - 358
     - type: AtmosPipeColor
       color: '#0055CCFF'
 - proto: GasVentScrubber
@@ -1939,6 +1944,9 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -2.5,-2.5
       parent: 2
+    - type: DeviceNetwork
+      deviceLists:
+      - 358
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 194
