--- a/Resources/Prototypes/_NF/Recipes/Lathes/biogen.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/biogen.yml
@@ -2,9 +2,21 @@
 
 - type: latheRecipe
   abstract: true
-  id: BioGenCondimentRecipe
+  id: BioGenMaterialsRecipe
+  category: Materials
+  applyMaterialDiscount: false
+  completetime: 1
+
+- type: latheRecipe
+  abstract: true
+  id: BioGenFoodRecipe
   category: Food
   completetime: 1
+
+- type: latheRecipe
+  abstract: true
+  id: BioGenCondimentRecipe
+  parent: BioGenFoodRecipe
   materials:
     Biomass: 18
 
@@ -13,7 +25,8 @@
 - type: latheRecipe
   id: NFBioGenHydroponicsSoilNutritionFlatpack
   result: HydroponicsSoilNutritionFlatpack
-  completetime: 60
+  category: Tools
+  completetime: 120
   applyMaterialDiscount: false
   materials:
     Biomass: 1200
@@ -21,34 +34,29 @@
 - type: latheRecipe
   id: NFBioGenWoodPlank
   result: MaterialWoodPlank1
-  completetime: 1
-  category: Materials
-  applyMaterialDiscount: false
+  parent: BioGenMaterialsRecipe
   materials:
     Biomass: 15
 
 - type: latheRecipe
   id: NFBioGenSheetPlastic
   result: SheetPlastic1
+  parent: BioGenMaterialsRecipe
   completetime: 10
-  category: Materials
-  applyMaterialDiscount: false
   materials:
     Biomass: 40
 
 - type: latheRecipe
   id: NFBioGenPaperSheet
   result: SheetPaper1
-  category: Materials
-  applyMaterialDiscount: false
-  completetime: 1
+  parent: BioGenMaterialsRecipe
   materials:
     Biomass: 10
 
 - type: latheRecipe
   id: NFBioGenFoodMeat
   result: FoodMeat
-  category: Food
+  parent: BioGenFoodRecipe
   applyMaterialDiscount: false
   completetime: 10
   materials:
@@ -57,7 +65,7 @@
 - type: latheRecipe
   id: BioGenChickenCube
   result: ChickenCube
-  category: Food
+  parent: BioGenFoodRecipe
   completetime: 300
   materials:
     Biomass: 45
@@ -65,7 +73,7 @@
 - type: latheRecipe
   id: BioGenDuckCube
   result: DuckCube
-  category: Food
+  parent: BioGenFoodRecipe
   completetime: 300
   materials:
     Biomass: 45
