--- a/Resources/Prototypes/Catalog/Cargo/cargo_atmospherics.yml
+++ b/Resources/Prototypes/Catalog/Cargo/cargo_atmospherics.yml
@@ -1,5 +1,6 @@
 - type: cargoProduct
   id: AtmosphericsAir
+  abstract: true # Frontier
   icon:
     sprite: Structures/Storage/canister.rsi
     state: grey
@@ -10,6 +11,7 @@
 
 - type: cargoProduct
   id: AtmosphericsOxygen
+  abstract: true # Frontier
   icon:
     sprite: Structures/Storage/canister.rsi
     state: blue
@@ -31,6 +33,7 @@
 
 - type: cargoProduct
   id: AtmosphericsNitrogen
+  abstract: true # Frontier
   icon:
     sprite: Structures/Storage/canister.rsi
     state: red
@@ -52,6 +55,7 @@
 
 - type: cargoProduct
   id: AtmosphericsCarbonDioxide
+  abstract: true # Frontier
   icon:
     sprite: Structures/Storage/canister.rsi
     state: black
@@ -73,6 +77,7 @@
 
 - type: cargoProduct
   id: AtmosphericsStorage
+  abstract: true # Frontier
   icon:
     sprite: Structures/Storage/canister.rsi
     state: yellow
