--- a/Resources/Maps/_NF/Shuttles/Sr/bottleneck.yml
+++ b/Resources/Maps/_NF/Shuttles/Sr/bottleneck.yml
@@ -1158,7 +1158,7 @@ entities:
     - type: Transform
       pos: -1.2964802,2.453908
       parent: 2
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 223
     components:
@@ -1168,7 +1168,7 @@ entities:
       parent: 2
     - type: Physics
       bodyType: Static
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 224
     components:
