--- a/Resources/Maps/_NF/Shuttles/Sr/broom.yml
+++ b/Resources/Maps/_NF/Shuttles/Sr/broom.yml
@@ -589,7 +589,7 @@ entities:
     - type: Transform
       pos: -0.5,-1.5
       parent: 1
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 94
     components:
@@ -599,7 +599,7 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 93
     components:
