--- a/Resources/Maps/_NF/Shuttles/Sr/mailpod.yml
+++ b/Resources/Maps/_NF/Shuttles/Sr/mailpod.yml
@@ -574,7 +574,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -0.5,0.5
       parent: 1
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 109
     components:
@@ -584,7 +584,7 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 110
     components:
