--- a/Resources/Maps/_NF/Shuttles/Sr/parcel.yml
+++ b/Resources/Maps/_NF/Shuttles/Sr/parcel.yml
@@ -1147,7 +1147,7 @@ entities:
     - type: Transform
       pos: 6.5,2.5
       parent: 1
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 100
     components:
@@ -1157,7 +1157,7 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 211
     components:
