--- a/Resources/Maps/_NF/Shuttles/beaker.yml
+++ b/Resources/Maps/_NF/Shuttles/beaker.yml
@@ -1904,7 +1904,7 @@ entities:
     - type: Transform
       pos: -5.5501204,-3.5460114
       parent: 1
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 371
     components:
@@ -1914,7 +1914,7 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 370
     components:
