--- a/Resources/Maps/_NF/Shuttles/bocadillo.yml
+++ b/Resources/Maps/_NF/Shuttles/bocadillo.yml
@@ -1231,7 +1231,7 @@ entities:
       rot: -1.5707963267948966 rad
       pos: -6.5,4.5
       parent: 2
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 141
     components:
@@ -1241,7 +1241,7 @@ entities:
       parent: 2
     - type: Physics
       bodyType: Static
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 238
     components:
