--- a/Resources/Maps/_NF/Shuttles/camper.yml
+++ b/Resources/Maps/_NF/Shuttles/camper.yml
@@ -952,7 +952,7 @@ entities:
         - 0
         - 0
         - 0
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 106
     components:
@@ -962,7 +962,7 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 107
     components:
