--- a/Resources/Maps/_NF/Shuttles/construct.yml
+++ b/Resources/Maps/_NF/Shuttles/construct.yml
@@ -487,14 +487,14 @@ entities:
     - type: Transform
       pos: -2.5,1.5
       parent: 1
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 94
     components:
     - type: Transform
       pos: 3.5,2.5
       parent: 1
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 95
     components:
