--- a/Resources/Maps/_NF/Shuttles/legman.yml
+++ b/Resources/Maps/_NF/Shuttles/legman.yml
@@ -879,7 +879,7 @@ entities:
     - type: Transform
       pos: 2.911514,1.3323524
       parent: 1
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 51
     components:
@@ -903,7 +903,7 @@ entities:
           occludes: True
           ents:
           - 134
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 18
     components:
