--- a/Resources/Maps/_NF/Shuttles/pts.yml
+++ b/Resources/Maps/_NF/Shuttles/pts.yml
@@ -1115,7 +1115,7 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 0.5,-4.5
       parent: 2
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 80
     components:
@@ -1125,7 +1125,7 @@ entities:
       parent: 2
     - type: Physics
       bodyType: Static
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 79
     components:
