--- a/Resources/Maps/_NF/Shuttles/searchlight.yml
+++ b/Resources/Maps/_NF/Shuttles/searchlight.yml
@@ -1754,7 +1754,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: 3.5,-9.5
       parent: 1
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 102
     components:
@@ -1764,7 +1764,7 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 270
     components:
@@ -1774,20 +1774,6 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-- proto: PillCanisterCharcoal
-  entities:
-  - uid: 258
-    components:
-    - type: Transform
-      pos: 1.8125076,-6.3069434
-      parent: 1
-- proto: PillCanisterDermaline
-  entities:
-  - uid: 255
-    components:
-    - type: Transform
-      pos: 1.7500076,-6.5413184
-      parent: 1
 - proto: PortableGeneratorPacmanShuttle
   entities:
   - uid: 273
