--- a/Resources/Maps/_NF/Shuttles/sparrow.yml
+++ b/Resources/Maps/_NF/Shuttles/sparrow.yml
@@ -1758,7 +1758,7 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 1.5,2.5
       parent: 174
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 269
     components:
@@ -1768,7 +1768,7 @@ entities:
       parent: 174
     - type: Physics
       bodyType: Static
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 218
     components:
@@ -2130,7 +2130,7 @@ entities:
     - type: Transform
       pos: 0.5,2.5
       parent: 174
-- proto: StorageCanister
+- proto: StorageCanisterSmall
   entities:
   - uid: 203
     components:
