--- a/Resources/Maps/_NF/Shuttles/spirit.yml
+++ b/Resources/Maps/_NF/Shuttles/spirit.yml
@@ -859,7 +859,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 2.5,-4.5
       parent: 1
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 101
     components:
@@ -869,7 +869,7 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 83
     components:
