--- a/Resources/Maps/_NF/Shuttles/chisel.yml
+++ b/Resources/Maps/_NF/Shuttles/chisel.yml
@@ -1870,7 +1870,7 @@ entities:
     - type: Transform
       pos: 6.5,2.5
       parent: 1
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 240
     components:
@@ -1887,7 +1887,7 @@ entities:
     - type: Transform
       pos: -2.5,-3.5
       parent: 1
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 16
     components:
