--- a/Resources/Maps/_NF/Shuttles/loader.yml
+++ b/Resources/Maps/_NF/Shuttles/loader.yml
@@ -1412,7 +1412,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: -2.5,-4.5
       parent: 1
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 222
     components:
@@ -1422,7 +1422,7 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 254
     components:
