--- a/Resources/Maps/_NF/Shuttles/mcdelivery.yml
+++ b/Resources/Maps/_NF/Shuttles/mcdelivery.yml
@@ -536,7 +536,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -0.5,0.5
       parent: 1
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 45
     components:
@@ -554,7 +554,7 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 1.5,2.5
       parent: 1
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 98
     components:
