--- a/Resources/Maps/_NF/Shuttles/piecrust.yml
+++ b/Resources/Maps/_NF/Shuttles/piecrust.yml
@@ -1881,7 +1881,7 @@ entities:
     - type: Transform
       pos: 1.0368968,1.5472217
       parent: 8756
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 116
     components:
@@ -1891,7 +1891,7 @@ entities:
       parent: 8756
     - type: Physics
       bodyType: Static
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 41
     components:
