--- a/Resources/Maps/_NF/Shuttles/pioneer.yml
+++ b/Resources/Maps/_NF/Shuttles/pioneer.yml
@@ -688,7 +688,7 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 2.5,2.5
       parent: 1
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 58
     components:
@@ -706,7 +706,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 0.5,-2.5
       parent: 1
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 35
     components:
