--- a/Resources/Maps/_NF/Shuttles/skipper.yml
+++ b/Resources/Maps/_NF/Shuttles/skipper.yml
@@ -2142,7 +2142,7 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 2.5,6.5
       parent: 1
-- proto: NitrogenCanister
+- proto: NitrogenCanisterSmall
   entities:
   - uid: 400
     components:
@@ -2175,7 +2175,7 @@ entities:
       rot: 25.132741228718352 rad
       pos: -3.3904374,3.7636838
       parent: 1
-- proto: OxygenCanister
+- proto: OxygenCanisterSmall
   entities:
   - uid: 417
     components:
