--- a/Resources/Maps/_NF/Shuttles/sparrow.yml
+++ b/Resources/Maps/_NF/Shuttles/sparrow.yml
@@ -2130,7 +2130,7 @@ entities:
     - type: Transform
       pos: 0.5,2.5
       parent: 174
-- proto: StorageCanisterSmall
+- proto: StorageCanister
   entities:
   - uid: 203
     components:
