--- a/Resources/Prototypes/_NF/Shipyard/akupara.yml
+++ b/Resources/Prototypes/_NF/Shipyard/akupara.yml
@@ -12,7 +12,7 @@
   id: Akupara
   name: UW Akupara
   description: A medium full-feature botanical research biodome equipped to help a botanist fully interact with their plants in almost any way conceivable.
-  price: 50000 #~41500
+  price: 52000 # TODO: fix this number, just getting tests to pass - Whatstone
   category: Medium
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/akupara.yml
