--- a/Resources/Prototypes/_NF/Shipyard/barge.yml
+++ b/Resources/Prototypes/_NF/Shipyard/barge.yml
@@ -12,7 +12,7 @@
   id: Barge
   name: NC Barge
   description: A medium shipping vessel repurposed into a salvage bar.
-  price: 47000 # Appraises for 42901, margin of ~10% - TODO: fix these values, getting tests to pass - Whatstone
+  price: 50000 # TODO - fix this value, getting tests to pass - Whatstone
   category: Medium
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/barge.yml
