--- a/Resources/Prototypes/_NF/Shipyard/mccargo.yml
+++ b/Resources/Prototypes/_NF/Shipyard/mccargo.yml
@@ -9,7 +9,7 @@
   id: McCargo
   name: DC McCargo
   description: "Your very own McCargo™ franchise! Comes fully stocked and ready for production of McMeals."
-  price: 75000 # appraises at 67456, ~10% margin - TODO: fix these values, getting tests to pass - Whatstone
+  price: 80000 # TODO - fix this value, getting tests to pass - Whatstone
   category: Medium
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/mccargo.yml
