change the nutriment in honeycomb to honey

--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/produce.yml
@@ -276,10 +276,10 @@
       food:
         maxVol: 20
         reagents:
-        - ReagentId: Nutriment #place holder
-          Quantity: 6
+        - ReagentId: Honey
+          Quantity: 5
         - ReagentId: Vitamin
-          Quantity: 4
+          Quantity: 5
   - type: Sprite
     sprite: _NF/Objects/Specific/Hydroponics/bees.rsi
     state: produce
