--- a/Resources/Maps/_NF/Shuttles/Admin/fishbowl.yml
+++ b/Resources/Maps/_NF/Shuttles/Admin/fishbowl.yml
@@ -1001,7 +1001,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -0.64250535,3.1323195
       parent: 2
-- proto: NitrogenCanisterSmall
+- proto: NitrogenCanister
   entities:
   - uid: 183
     components:
@@ -1011,7 +1011,7 @@ entities:
       parent: 2
     - type: Physics
       bodyType: Static
-- proto: OxygenCanisterSmall
+- proto: OxygenCanister
   entities:
   - uid: 182
     components:
