--- a/Resources/Maps/_NF/Shuttles/garden.yml
+++ b/Resources/Maps/_NF/Shuttles/garden.yml
@@ -1533,7 +1533,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: 3.5,4.5
       parent: 1
-- proto: NitrogenCanisterSmall
+- proto: NitrogenCanister
   entities:
   - uid: 282
     components:
@@ -1543,7 +1543,7 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-- proto: OxygenCanisterSmall
+- proto: OxygenCanister
   entities:
   - uid: 102
     components:
