--- a/Resources/Maps/_NF/Shuttles/honker.yml
+++ b/Resources/Maps/_NF/Shuttles/honker.yml
@@ -1114,7 +1114,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: 5.5,10.5
       parent: 2
-- proto: NitrogenCanisterSmall
+- proto: NitrogenCanister
   entities:
   - uid: 143
     components:
@@ -1131,7 +1131,7 @@ entities:
     - type: Transform
       pos: 4.5,12.5
       parent: 2
-- proto: OxygenCanisterSmall
+- proto: OxygenCanister
   entities:
   - uid: 100
     components:
