--- a/Resources/Maps/_NF/Shuttles/placebo.yml
+++ b/Resources/Maps/_NF/Shuttles/placebo.yml
@@ -1419,7 +1419,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 2.5,1.5
       parent: 1
-- proto: NitrogenCanisterSmall
+- proto: NitrogenCanister
   entities:
   - uid: 246
     components:
@@ -1429,7 +1429,7 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-- proto: OxygenCanisterSmall
+- proto: OxygenCanister
   entities:
   - uid: 271
     components:
