--- a/Resources/Maps/_NF/Shuttles/sparrow.yml
+++ b/Resources/Maps/_NF/Shuttles/sparrow.yml
@@ -1758,7 +1758,7 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 1.5,2.5
       parent: 174
-- proto: NitrogenCanisterSmall
+- proto: NitrogenCanister
   entities:
   - uid: 269
     components:
@@ -1768,7 +1768,7 @@ entities:
       parent: 174
     - type: Physics
       bodyType: Static
-- proto: OxygenCanisterSmall
+- proto: OxygenCanister
   entities:
   - uid: 218
     components:
