--- a/Resources/Maps/_NF/Shuttles/Scrap/point.yml
+++ b/Resources/Maps/_NF/Shuttles/Scrap/point.yml
@@ -440,7 +440,7 @@ entities:
       - 104
       - 116
       - 162
-- proto: AirCanisterSmall
+- proto: AirCanister
   entities:
   - uid: 45
     components:
