--- a/Resources/Maps/_NF/Shuttles/Sr/watchdog.yml
+++ b/Resources/Maps/_NF/Shuttles/Sr/watchdog.yml
@@ -1007,7 +1007,7 @@ entities:
     - type: Transform
       pos: 1.5,3.5
       parent: 1
-- proto: NitrogenCanisterSmall
+- proto: NitrogenCanister
   entities:
   - uid: 60
     components:
@@ -1017,7 +1017,7 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-- proto: OxygenCanisterSmall
+- proto: OxygenCanister
   entities:
   - uid: 82
     components:
