--- a/Resources/Maps/_NF/Shuttles/harbormaster.yml
+++ b/Resources/Maps/_NF/Shuttles/harbormaster.yml
@@ -1435,7 +1435,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -4.5,-3.5
       parent: 1
-- proto: NitrogenCanisterSmall
+- proto: NitrogenCanister
   entities:
   - uid: 118
     components:
@@ -1445,7 +1445,7 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-- proto: OxygenCanisterSmall
+- proto: OxygenCanister
   entities:
   - uid: 89
     components:
