--- a/Resources/Maps/_NF/Shuttles/phoenix.yml
+++ b/Resources/Maps/_NF/Shuttles/phoenix.yml
@@ -4955,7 +4955,7 @@ entities:
     - type: Transform
       pos: 5.5,4.5
       parent: 1
-- proto: StorageCanister
+- proto: SalvageCanisterSpawner
   entities:
   - uid: 648
     components:
