--- a/Resources/Maps/_NF/Shuttles/prospector.yml
+++ b/Resources/Maps/_NF/Shuttles/prospector.yml
@@ -1211,7 +1211,7 @@ entities:
     - type: Transform
       pos: 1.5,-7.5
       parent: 201
-- proto: NitrogenCanisterSmall
+- proto: NitrogenCanister
   entities:
   - uid: 120
     components:
@@ -1228,7 +1228,7 @@ entities:
     - type: Transform
       pos: -2.5,-5.5
       parent: 201
-- proto: OxygenCanisterSmall
+- proto: OxygenCanister
   entities:
   - uid: 83
     components:
