--- a/Resources/Prototypes/_NF/Shipyard/BlackMarket/barnacle.yml
+++ b/Resources/Prototypes/_NF/Shipyard/BlackMarket/barnacle.yml
@@ -7,7 +7,7 @@
   id: Barnacle
   name: Barnacle
   description: 'Nobody expects the lowly barnacle'
-  price: 20000 # TODO: fix this number, just getting tests to pass - Whatstone
+  price: 17000 # Appraises for 15445, price set to 17k, margin of ~10% - TODO: review ship values - Whatstone
   category: Small
   group: BlackMarket
   shuttlePath: /Maps/_NF/Shuttles/BlackMarket/barnacle.yml
