--- a/Resources/Prototypes/_NF/Shipyard/bulker.yml
+++ b/Resources/Prototypes/_NF/Shipyard/bulker.yml
@@ -12,7 +12,7 @@
   id: Bulker
   name: KL Bulker
   description: A medium mining vessel designed for deep space missions
-  price: 50000 # TODO: fix this number, just getting tests to pass - Whatstone
+  price: 47500 #41245$ before the +15% (6190$) 
   category: Medium
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/bulker.yml
