--- a/Resources/Prototypes/_NF/Shipyard/lantern.yml
+++ b/Resources/Prototypes/_NF/Shipyard/lantern.yml
@@ -12,7 +12,7 @@
   id: Lantern
   name: LVHI Lantern
   description: The Lantern is a medium-sized chapel-vessel equipped with everything chaplain might need in their never ending battle for salvation of NT personnel souls. Manufactured by Langstad-Voigt Heavy Industries.
-  price: 36000 # TODO: fix this number, just getting tests to pass - Whatstone
+  price: 34000 # ~27900$ on mapinit + ~4200$ from 10% markup
   category: Medium
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/lantern.yml
