--- a/Resources/Prototypes/_NF/Shipyard/tyne.yml
+++ b/Resources/Prototypes/_NF/Shipyard/tyne.yml
@@ -12,7 +12,7 @@
   id: Tyne
   name: SBB Tyne
   description: A small, agile lifeboat with an exterior deck and survivor cabin for search and rescue operations. 
-  price: 20000 # TODO: fix this number, just getting tests to pass - Whatstone
+  price: 19000 #~5-6% markup as it's a med ship. Grid values at 17372.
   category: Small
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/tyne.yml
