--- a/Resources/Prototypes/Atmospherics/gases.yml
+++ b/Resources/Prototypes/Atmospherics/gases.yml
@@ -6,7 +6,7 @@
   molarMass: 32
   color: 2887E8
   reagent: Oxygen
-  pricePerMole: 0
+  pricePerMole: 0.1 # Frontier 0<0.1
 
 - type: gas
   id: 1
@@ -16,7 +16,7 @@
   molarMass: 28
   color: DA1010
   reagent: Nitrogen
-  pricePerMole: 0
+  pricePerMole: 0.1 # Frontier 0<0.1
 
 - type: gas
   id: 2
@@ -26,7 +26,7 @@
   molarMass: 44
   color: 4e4e4e
   reagent: CarbonDioxide
-  pricePerMole: 0
+  pricePerMole: 0.1 # Frontier 0<0.1
 
 - type: gas
   id: 3
@@ -38,7 +38,7 @@
   gasOverlayState: plasma
   color: FF3300
   reagent: Plasma
-  pricePerMole: 0
+  pricePerMole: 0.1 # Frontier 0<0.1
 
 - type: gas
   id: 4
