--- a/Resources/Prototypes/Entities/Structures/Storage/Canisters/gas_canisters.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Canisters/gas_canisters.yml
@@ -99,7 +99,7 @@
           components:
             - GasTank
     - type: StaticPrice
-      price: 250 # Frontier: 200<250
+      price: 100 # Frontier: 200<100 This is a 100 + 170~ for gas on 0.1
     - type: AccessReader
 #      access: [["Atmospherics"], ["Engineering"], ["Research"], ["Captain"]]
     - type: Lock
