--- a/Resources/Prototypes/Catalog/Cargo/cargo_atmospherics.yml
+++ b/Resources/Prototypes/Catalog/Cargo/cargo_atmospherics.yml
@@ -1,6 +1,6 @@
 - type: cargoProduct
   id: AtmosphericsAir
-  abstract: true # Frontier
+#  abstract: true # Frontier
   icon:
     sprite: Structures/Storage/canister.rsi
     state: grey
@@ -11,7 +11,7 @@
 
 - type: cargoProduct
   id: AtmosphericsOxygen
-  abstract: true # Frontier
+#  abstract: true # Frontier
   icon:
     sprite: Structures/Storage/canister.rsi
     state: blue
@@ -33,7 +33,7 @@
 
 - type: cargoProduct
   id: AtmosphericsNitrogen
-  abstract: true # Frontier
+#  abstract: true # Frontier
   icon:
     sprite: Structures/Storage/canister.rsi
     state: red
@@ -77,7 +77,7 @@
 
 - type: cargoProduct
   id: AtmosphericsStorage
-  abstract: true # Frontier
+#  abstract: true # Frontier
   icon:
     sprite: Structures/Storage/canister.rsi
     state: yellow
