--- a/Resources/Maps/_NF/POI/mchobo.yml
+++ b/Resources/Maps/_NF/POI/mchobo.yml
@@ -4389,7 +4389,7 @@ entities:
     - type: Transform
       pos: 10.5,11.5
       parent: 1
-- proto: NFBedrollStained
+- proto: McHoboBedsRandom
   entities:
   - uid: 26
     components:
