--- a/Resources/Prototypes/_NF/Entities/Structures/Furniture/bedroll.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Furniture/bedroll.yml
@@ -103,26 +103,6 @@
   - type: Strap
     enabled: False
 
-- type: entity # Mostly for crafting
-  id: NFBedrollFoldedRandom
-  name: folded bedroll
-  suffix: Random
-  parent: MarkerBasePlaceFree
-  components:
-  - type: Sprite
-    layers:
-    - state: green
-    - sprite: _NF/Structures/Furniture/bedroll.rsi
-      state: bedroll01_folded
-  - type: RandomSpawner
-    prototypes:
-    - NFBedrollFolded
-    - NFBedrollAltFolded
-    chance: 1
-    rarePrototypes:
-    - NFBedrollStainedFolded
-    rareChance: 0.001
-
 - type: entity # McHobo special
   id: NFBedrollStained
   parent: NFBedroll
@@ -154,12 +134,36 @@
           False: {visible: true}
   - type: RandomSprite
     available:
-      - bedrollStain:
+      - unfoldedLayer:
+          bedroll01: ""
+          bedroll02: ""
+        bedrollStain:
           overlay_stain_01: LiquidsBiological
           overlay_stain_02: LiquidsBiological
           overlay_stain_03: LiquidsBiological
           overlay_stain_04: LiquidsBiological
           mask_null: ""
+
+- type: entity # Mostly for crafting
+  id: McHoboBedsRandom
+  name: stained bedroll spawner
+  suffix: Random
+  parent: MarkerBase
+  components:
+  - type: Sprite
+    layers:
+    - state: green
+    - sprite: _NF/Structures/Furniture/bedroll.rsi
+      state: bedroll01_folded
+  - type: RandomSpawner
+    prototypes:
+    - NFBedrollStained
+    - Mattress
+    chance: 1
+    rarePrototypes:
+    - NFBedroll
+    - NFBedrollAlt
+    rareChance: 0.1
 
 - type: entity
   parent: NFBedrollStained
