--- a/Resources/Maps/_NF/POI/grifty.yml
+++ b/Resources/Maps/_NF/POI/grifty.yml
@@ -4291,6 +4291,7 @@ entities:
           - 296
           - 528
           - 388
+          - 219
         paper_label: !type:ContainerSlot
           showEnts: False
           occludes: True
@@ -4655,7 +4656,7 @@ entities:
     - type: Transform
       pos: -1.5,5.5
       parent: 1
-- proto: RandomSoap
+- proto: RandomPosterContrabandDeadDrop
   entities:
   - uid: 44
     components:
@@ -4681,7 +4682,7 @@ entities:
   - uid: 579
     components:
     - type: Transform
-      pos: -8.5,5.5
+      pos: -4.5,4.5
       parent: 1
   - uid: 582
     components:
@@ -6006,8 +6007,6 @@ entities:
     - type: Transform
       pos: 1.5,2.5
       parent: 1
-<<<<<<< HEAD
-=======
 - proto: WeaponRevolverDeckardExpeditionGrifty
   entities:
   - uid: 219
@@ -6017,7 +6016,6 @@ entities:
     - type: Physics
       canCollide: False
     - type: InsideEntityStorage
->>>>>>> upstream/master
 - proto: Window
   entities:
   - uid: 751
