--- a/Resources/Prototypes/_NF/PointsOfInterest/grifty.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/grifty.yml
@@ -10,7 +10,7 @@
 # Down at your local saloon
 - type: pointOfInterest
   id: Grifty
-  name: "Grifty's Gas n Grub"
+  name: "Заправка Зекинса"
   rangeMin: 3250
   rangeMax: 5600
   IFFColor: "#ffa600" #yellorange for faction style
@@ -19,7 +19,7 @@
 
 - type: gameMap
   id: Grifty
-  mapName: "Grifty's Gas n Grub"
+  mapName: "Заправка Зекинса"
   mapPath: /Maps/_NF/POI/grifty.yml
   minPlayers: 0
   stations:
@@ -27,4 +27,4 @@
       stationProto: DeadDropShipyardFrontierOutpost
       components:
         - type: StationNameSetup
-          mapNameTemplate: "Grifty's Gas n Grub"
+          mapNameTemplate: "Заправка Зекинса"
