--- a/Resources/Prototypes/_NF/Datasets/tips.yml
+++ b/Resources/Prototypes/_NF/Datasets/tips.yml
@@ -1,5 +1,5 @@
 - type: dataset
-  id: TipsNF
+  id: NFTips
   values:
   - "If you're on fire, you can click the alert on the right of your screen to stop, drop, and roll."
   - "You can view and edit all keybindings used in-game at any time through the Options menu."
