--- a/Resources/Prototypes/_NF/Catalog/Fills/Items/weapon_cases_expedition.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Items/weapon_cases_expedition.yml
@@ -2,20 +2,20 @@
 # Pistols
 - type: entity
   parent: WeaponCaseShort
-  id: WeaponCaseShortMk58
+  id: WeaponCaseShortMk58Expedition
   suffix: Dungeon, Mk58
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: WeaponPistolMk58
+    - id: WeaponPistolMk58Expedition
       amount: 1
     - id: MagazinePistol
       amount: 2
 
 - type: entity
   parent: WeaponCaseShort
-  id: WeaponCaseShortN1984
+  id: WeaponCaseShortN1984Expedition
   suffix: Dungeon, N1984
   categories: [ HideSpawnMenu ]
   components:
@@ -54,6 +54,7 @@
     - id: MagazineBoxCaselessRifle10x24
       amount: 1
 
+# Revolvers
 - type: entity
   parent: WeaponCaseShort
   id: WeaponCaseShortArgentiExpedition
@@ -62,21 +63,7 @@
   components:
   - type: StorageFill
     contents:
-    - id: WeaponRevolverDeckard
-      amount: 1
-    - id: CartridgeMagnum
-      amount: 2
-
-# Revolvers
-- type: entity
-  parent: WeaponCaseShort
-  id: WeaponCaseShortArgenti
-  suffix: Dungeon, Argenti
-  categories: [ HideSpawnMenu ]
-  components:
-  - type: StorageFill
-    contents:
-    - id: WeaponRevolverArgenti
+    - id: WeaponRevolverArgentiExpedition
       amount: 1
     - id: SpeedLoaderRifleHeavy
       amount: 2
@@ -115,7 +102,7 @@
   components:
   - type: StorageFill
     contents:
-    - id: WeaponRevolverMateba
+    - id: WeaponRevolverMatebaExpedition
       amount: 1
     - id: SpeedLoaderMagnum
       amount: 2
@@ -128,7 +115,7 @@
   components:
   - type: StorageFill
     contents:
-    - id: WeaponRevolverPirate
+    - id: WeaponRevolverPirateExpedition
       amount: 1
     - id: SpeedLoaderMagnum
       amount: 2
@@ -136,65 +123,65 @@
 # Shotguns
 - type: entity
   parent: WeaponCaseShort
-  id: WeaponCaseShortHandmade
+  id: WeaponCaseShortHandmadeExpedition
   suffix: Dungeon, Handmade Pistol
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: WeaponShotgunHandmade
+    - id: WeaponShotgunHandmadeExpedition
       amount: 1
     - id: BoxLethalshot
       amount: 1
 
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongShotgunDoubleBarreled
+  id: WeaponCaseLongShotgunDoubleBarreledExpedition
   suffix: Dungeon, Double Barreled
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: WeaponShotgunDoubleBarreled
+    - id: WeaponShotgunDoubleBarreledExpedition
       amount: 1
     - id: BoxLethalshot
       amount: 2
 
 - type: entity
   parent: WeaponCaseShort
-  id: WeaponCaseShortSawn
+  id: WeaponCaseShortSawnExpedition
   suffix: Dungeon, Sawn-off
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: WeaponShotgunSawn
+    - id: WeaponShotgunSawnExpedition
       amount: 1
     - id: BoxLethalshot
       amount: 1
 
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongKammerer
+  id: WeaponCaseLongKammererExpedition
   suffix: Dungeon, Kammerer
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: WeaponShotgunKammerer
+    - id: WeaponShotgunKammererExpedition
       amount: 1
     - id: BoxLethalshot
       amount: 2
 
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongEnforcer
+  id: WeaponCaseLongEnforcerExpedition
   suffix: Dungeon, Enforcer
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: WeaponShotgunEnforcer
+    - id: WeaponShotgunEnforcerExpedition
       amount: 1
     - id: BoxLethalshot
       amount: 2
@@ -217,13 +204,13 @@
 # SMGs
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongWT550
+  id: WeaponCaseLongWT550Expedition
   suffix: Dungeon, WT550
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: WeaponSubMachineGunWt550
+    - id: WeaponSubMachineGunWt550Expedition
       amount: 1
     - id: MagazinePistolSubMachineGunTopMounted
       amount: 2
@@ -232,13 +219,13 @@
 
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongAtreides
+  id: WeaponCaseLongAtreidesExpedition
   suffix: Dungeon, Atreides
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: WeaponSubMachineGunAtreides
+    - id: WeaponSubMachineGunAtreidesExpedition
       amount: 1
     - id: MagazinePistolSubMachineGun
       amount: 2
@@ -247,13 +234,13 @@
 
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongDrozd
+  id: WeaponCaseLongDrozdExpedition
   suffix: Dungeon, Drozd
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: WeaponSubMachineGunDrozd
+    - id: WeaponSubMachineGunDrozdExpedition
       amount: 1
     - id: MagazinePistolSubMachineGun
       amount: 2
@@ -275,34 +262,10 @@
     - id: MagazineBoxPistol
       amount: 2
 
-- type: entity     #Corvax-Frontier
-  parent: WeaponCaseLong
-  id: WeaponCaseLongVector45
-  suffix: Dungeon, SMG, Vector
-  components:
-  - type: StorageFill
-    contents:
-    - id: WeaponSubMachineGunVector45
-      amount: 1
-    - id: MagazineVector45
-      amount: 2
-
-- type: entity     #Corvax-Frontier
-  parent: WeaponCaseLong
-  id: WeaponCaseLongVector22
-  suffix: Dungeon, SMG, Vector
-  components:
-  - type: StorageFill
-    contents:
-    - id: WeaponSubMachineGunVector22
-      amount: 1
-    - id: MagazineVector22
-      amount: 2
-
 # Rifles
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongGestio
+  id: WeaponCaseLongGestioExpedition
   suffix: Dungeon, Gestio
   categories: [ HideSpawnMenu ]
   components:
@@ -315,20 +278,20 @@
 
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongWeaponRifleNovaliteC1
+  id: WeaponCaseLongWeaponRifleNovaliteC1Expedition
   suffix: Dungeon, NovaliteC1
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: WeaponRifleNovaliteC1
+    - id: WeaponRifleNovaliteC1Expedition
       amount: 1
     - id: MagazineNovaliteC1
       amount: 2
 
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongLecter
+  id: WeaponCaseLongLecterExpedition
   suffix: Dungeon, Lecter
   categories: [ HideSpawnMenu ]
   components:
@@ -341,7 +304,7 @@
 
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongAk
+  id: WeaponCaseLongAkExpedition
   suffix: Dungeon, AKMS
   categories: [ HideSpawnMenu ]
   components:
@@ -354,7 +317,7 @@
 
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongM90
+  id: WeaponCaseLongM90Expedition
   suffix: Dungeon, M-90gl
   categories: [ HideSpawnMenu ]
   components:
@@ -367,7 +330,7 @@
 
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongSVT
+  id: WeaponCaseLongSVTExpedition
   suffix: Dungeon, SVT
   categories: [ HideSpawnMenu ]
   components:
@@ -381,59 +344,59 @@
 # Energy
 - type: entity
   parent: WeaponCaseShort
-  id: WeaponCaseShortLaserGun
+  id: WeaponCaseShortLaserGunExpedition
   suffix: Dungeon, Retro Laser
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: WeaponLaserGun
+    - id: WeaponLaserGunExpedition
       amount: 2
 
 - type: entity
   parent: WeaponCaseShort
-  id: WeaponCaseShortSvalinn
+  id: WeaponCaseShortSvalinnExpedition
   suffix: Dungeon, Svalinn
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: WeaponLaserSvalinn
+    - id: WeaponLaserSvalinnExpedition
       amount: 1
     - id: PowerCellHigh
       amount: 2
 
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongLaserCarbine
+  id: WeaponCaseLongLaserCarbineExpedition
   suffix: Dungeon, Laser Carbine
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: WeaponLaserCarbine
+    - id: WeaponLaserCarbineExpedition
       amount: 1
 
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongEnergyGun
+  id: WeaponCaseLongEnergyGunExpedition
   suffix: Dungeon, Energy Gun
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: WeaponEnergyGun
+    - id: WeaponEnergyGunExpedition
       amount: 1
 
 - type: entity
   parent: WeaponCaseShort
-  id: WeaponCaseShortAdvancedLaser
+  id: WeaponCaseShortAdvancedLaserExpedition
   suffix: Dungeon, Advanced Laser
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: WeaponAdvancedLaser
+    - id: WeaponAdvancedLaserExpedition
       amount: 1
 
 - type: entity
@@ -444,7 +407,7 @@
   components:
   - type: StorageFill
     contents:
-    - id: WeaponLaserCannon
+    - id: WeaponLaserCannonExpedition
       amount: 1
 
 - type: entity
@@ -455,26 +418,26 @@
   components:
   - type: StorageFill
     contents:
-    - id: WeaponXrayCannon
+    - id: WeaponXrayCannonExpedition
       amount: 1
 
 # Sniper
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongMosin
+  id: WeaponCaseLongMosinExpedition
   suffix: Dungeon, Mosin
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: WeaponSniperMosin
+    - id: WeaponSniperMosinExpedition
       amount: 1
     - id: MagazineBoxLightRifle
       amount: 2
 
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongHristov
+  id: WeaponCaseLongHristovExpedition
   suffix: Dungeon, Hristov
   categories: [ HideSpawnMenu ]
   components:
@@ -487,7 +450,7 @@
 
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongRepeater
+  id: WeaponCaseLongRepeaterExpedition
   suffix: Dungeon, Repeater
   categories: [ HideSpawnMenu ]
   components:
@@ -500,13 +463,13 @@
 
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongMusket
+  id: WeaponCaseLongMusketExpedition
   suffix: Dungeon, Musket
   categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
-    - id: Musket
+    - id: WeaponMusketExpedition
       amount: 1
     - id: MagazineBoxAntiMateriel
       amount: 2
@@ -514,7 +477,7 @@
 # Launchers
 - type: entity
   parent: WeaponCaseLong
-  id: WeaponCaseLongLauncherRocket
+  id: WeaponCaseLongLauncherRocketExpedition
   suffix: Dungeon, RPG
   categories: [ HideSpawnMenu ]
   components:
@@ -555,7 +518,7 @@
 # Melee
 - type: entity
   parent: WeaponCaseShort
-  id: WeaponCaseShortEnergyShield
+  id: WeaponCaseShortEnergyShieldExpedition
   suffix: Dungeon, Energy Shield
   categories: [ HideSpawnMenu ]
   components:
@@ -566,7 +529,7 @@
 
 - type: entity
   parent: WeaponCaseShort
-  id: WeaponCaseShortEnergySword
+  id: WeaponCaseShortEnergySwordExpedition
   suffix: Dungeon, Energy Sword
   categories: [ HideSpawnMenu ]
   components:
@@ -577,7 +540,7 @@
 
 - type: entity
   parent: WeaponCaseShort
-  id: WeaponCaseShortEnergyDagger
+  id: WeaponCaseShortEnergyDaggerExpedition
   suffix: Dungeon, Energy Dagger
   categories: [ HideSpawnMenu ]
   components:
@@ -588,7 +551,7 @@
 
 - type: entity
   parent: WeaponCaseShort
-  id: WeaponCaseShortEnergyCutlass
+  id: WeaponCaseShortEnergyCutlassExpedition
   suffix: Dungeon, Energy Cutlass
   categories: [ HideSpawnMenu ]
   components:
@@ -599,7 +562,7 @@
 
 - type: entity
   parent: WeaponCaseShort
-  id: WeaponCaseShortEnergySwordDouble
+  id: WeaponCaseShortEnergySwordDoubleExpedition
   suffix: Dungeon, Energy Sword Double
   categories: [ HideSpawnMenu ]
   components:
