--- a/Resources/Prototypes/_NF/Entities/Structures/Furniture/bedroll.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Furniture/bedroll.yml
@@ -144,7 +144,7 @@
           overlay_stain_04: LiquidsBiological
           mask_null: ""
 
-- type: entity # Mostly for crafting
+- type: entity # McHobo bed spawner
   id: McHoboBedsRandom
   name: stained bedroll spawner
   suffix: Random
@@ -160,10 +160,6 @@
     - NFBedrollStained
     - Mattress
     chance: 1
-    rarePrototypes:
-    - NFBedroll
-    - NFBedrollAlt
-    rareChance: 0.1
 
 - type: entity
   parent: NFBedrollStained
