--- a/Resources/Prototypes/_NF/Palettes/liquids.yml
+++ b/Resources/Prototypes/_NF/Palettes/liquids.yml
@@ -1,7 +1,7 @@
 
 - type: palette
   id: LiquidsBiological
-  name: biological liquid
+  name: biological liquids
   colors:
     humanblood: "#800000"
     humanbloodalt: "#a11818"
